--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "add": "^2.0.6",
+    "axios": "^1.7.5",
     "button": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "shadcn-ui": "^0.2.3"
   },
   "devDependencies": {
